--- a/learning_rust/simple_crypt/Cargo.toml
+++ b/learning_rust/simple_crypt/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 fuse_mt = "0.6.0"
+hmac = "0.12.1"
 libc = "0.2.147"
 log = "0.4.19"
 openssl = "0.10.55"
+sha2 = "0.10.8"
 
