add backtrace for internal errors

--- a/learning_rust/simple_crypt/Cargo.toml
+++ b/learning_rust/simple_crypt/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.79"
 fuse_mt = "0.6.0"
 hmac = "0.12.1"
 libc = "0.2.147"
